--- a/Scheduler/index.html
+++ b/Scheduler/index.html
@@ -1,42 +1,80 @@
 <!DOCTYPE html>
-<!--
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
 <html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta name="format-detection" content="telephone=no" />
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Hello World!</title>
-    </head>
+<head>
+    <title></title>
+    <link href="http://cdn.kendostatic.com/2014.1.416/styles/kendo.common.min.css" rel="stylesheet" />
+    <link href="http://cdn.kendostatic.com/2014.1.416/styles/kendo.default.min.css" rel="stylesheet" />
+    <link href="http://cdn.kendostatic.com/2014.1.416/styles/kendo.mobile.all.min.css" rel="stylesheet" />
+    <script src="http://cdn.kendostatic.com/2014.1.416/js/jquery.min.js"></script>
+    <script src="http://cdn.kendostatic.com/2014.1.416/js/kendo.all.min.js"></script>
+    <script src="everlive.all.min.js"></script>
+    
+</head>
     <body>
-        <div class="app">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
+    	 <div data-role="view" data-init="initScheduler">
+    	 <header data-role="header"></header>
+    	 <div id="scheduler"></div>
         </div>
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript">
-            app.initialize();
-        </script>
-    </body>
+
+            <<script>
+                $(document).ready(function() {
+                    // initialize Everlive application with application API key
+                    var everlive = new Everlive({
+                        apiKey: "jVGewMB3zHoOHgi1",
+                        scheme: "http"
+                    });
+
+                    var dataSource = new kendo.data.SchedulerDataSource({
+                        type: "everlive",
+                        transport: {
+                            // binding to the Order type in Everlive
+                            typeName: "Scheduler"
+                        },
+                        schema: {
+                            model: {
+                                id: "Id",
+                                fields: {
+                                    // default Everlive fields
+                                    CreatedBy:  { type: "string" },
+                                    CreatedAt:  { type: "date" },
+                                    ModifiedAt: { type: "date" },
+
+                                    // type fields, projected to the scheduler format
+                                    title: { from: "Title", defaultValue: "No title", validation: { required: true } },
+                                    start: { type: "date", from: "Start" },
+                                    end: { type: "date", from: "End" },
+                                    startTimezone: { from: "StartTimezone" },
+                                    endTimezone: { from: "EndTimezone" },
+                                    description: { from: "Description" },
+                                    recurrenceId: { from: "RecurrenceID" },
+                                    recurrenceRule: { from: "RecurrenceRule" },
+                                    recurrenceException: { from: "RecurrenceException" },
+                                    ownerId: { from: "OwnerID", defaultValue: 1 },
+                                    isAllDay: { type: "boolean", from: "IsAllDay" }
+                                }
+                            }
+                        }
+                       
+                    });
+
+                    $("#scheduler").kendoScheduler({
+                        date: new Date("2013/6/13"),
+                        startTime: new Date("2013/6/13 07:00 AM"),
+           			 height: kendo.support.mobileOS.wp ? "28em" : 748,
+                        views: [
+                            "day",
+                            "week",
+                            "month",
+                        ],
+                        mobile: "tablet",
+                        dataSource: dataSource,
+                        timezone: "Etc/UTC",
+                    });
+
+                });
+            </script>
+            <script>
+    		var app = new kendo.mobile.Application(document.body);
+			</script>
+   </body>
 </html>
