--- a/Scheduler/index.html
+++ b/Scheduler/index.html
@@ -20,7 +20,7 @@
                 $(document).ready(function() {
                     // initialize Everlive application with application API key
                     var everlive = new Everlive({
-                        apiKey: "jVGewMB3zHoOHgi1",
+                        apiKey: "api-key",
                         scheme: "http"
                     });
 
